--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "2.7"
 install: python setup.py install
-script: python -m unittest ditto.test_ditto
+script: python -m unittest discover
